[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "krcg"
version = "4.8"
license = "MIT"
authors = [
    { name = "Lionel Panhaleux", email = "lionel.panhaleux+krcg@gmail.com" },
]
description = "Library for VTES cards and TWDA."
keywords = ["vtes", "Vampire: The Eternal Struggle", "CCG", "TWD", "TWDA"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "arrow",
    "pyyaml",
    "numpy",
    "requests",
    "setuptools",
    "unidecode",
]

[project.urls]
Repository = "https://github.com/lionel-panhaleux/krcg"

[tool.hatch.build.targets.wheel]
packages = ["krcg", "cards"]

[tool.uv]
dev-dependencies = ["certifi", "coverage", "ipython", "pytest", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
