[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "krcg"
version = "4.19"
license = "MIT"
authors = [
    { name = "Lionel Panhaleux", email = "lionel.panhaleux+krcg@gmail.com" },
]
description = "Library for VTES cards and TWDA."
keywords = ["vtes", "Vampire: The Eternal Struggle", "CCG", "TWD", "TWDA"]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp",
    "arrow",
    "msgspec",
    "numpy",
    "pyyaml",
    "setuptools",
    "unidecode",
]

[project.urls]
Repository = "https://github.com/lionel-panhaleux/krcg"

[tool.hatch.build.targets.wheel]
packages = ["krcg"]

[tool.ruff.lint]
select = ["E", "D", "F", "W", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "certifi",
    "coverage",
    "ipdb",
    "ipython",
    "pytest",
    "pytest-asyncio",
    "ruff",
    "ty",
    "types-PyYAML",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
