[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "krcg"
version = "5.4"
license = "MIT"
authors = [
    { name = "Lionel Panhaleux", email = "lionel.panhaleux+krcg@gmail.com" },
]
description = "Library for VTES cards and TWDA."
keywords = ["vtes", "Vampire: The Eternal Struggle", "CCG", "TWD", "TWDA"]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp",
    "arrow",
    "msgspec",
    "numpy",
    "pyyaml",
    "unidecode",
]

[project.urls]
Repository = "https://github.com/lionel-panhaleux/krcg"

[tool.hatch.build.targets.wheel]
packages = ["krcg"]

[tool.ruff.lint]
select = ["E", "D", "F", "W", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "certifi",
    "ipdb",
    "ipython",
    "pytest",
    "pytest-asyncio",
    "ruff",
    "ty",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
