[metadata]
name = krcg
version = 1.2.dev0
author = lionelpx
author_email = lionel.panhaleux@gmail.com
url = http://github.com/lionel-panhaleux/krcg
description="CLI, web API and Discord bot for VTES cards and TWDA.",
long_description = file: README.md
long_description_content_type = text/markdown
license = "MIT"
keywords = vampire vtes ccg twd
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Other Audience
    Natural Language :: English
    Operating System :: OS Independent
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Other/Nonlisted Topic

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    setuptools
install_requires =
    arrow
    certifi
    pyyaml
    discord
    requests
    setuptools
    unidecode

[options.entry_points]
console_scripts =
    krcg = src.cli:main
    krcg-bot = src.discord_bot:main
    krcg-gen = src.static_gen:main [dev]

[options.extras_require]
dev =
    coverage
    codacy-coverage
    black
    doc8
    flake8
    ipython
    jsonschema
    pytest
    uwsgi
    zest.releaser[recommended]
web =
    flask

[options.packages.find]
exclude =
    tests

[flake8]
max-line-length = 88
exclude = build, dist
ignore = E203, W503

[bdist_wheel]
python-tag = py3

[distutils]
index-servers = pypi

[tool:pytest]
# discord uses aiohttp, which still uses the coroutine decorator
filterwarnings =
    ignore:.*"@coroutine" decorator is deprecated.*:DeprecationWarning

[zest.releaser]
create-wheel = yes
