[metadata]
name = krcg
version = 2.30
author = lionelpx
author_email = lionel.panhaleux@gmail.com
url = http://github.com/lionel-panhaleux/krcg
description="CLI, web API and Discord bot for VTES cards and TWDA.",
long_description = file: README.md
long_description_content_type = text/markdown
license = "MIT"
keywords = vampire vtes vekn wod ccg twd
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Games/Entertainment

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    setuptools
install_requires =
    arrow
    pyyaml
    numpy
    requests
    setuptools
    unidecode

[options.extras_require]
dev =
    certifi
    coverage
    codacy-coverage
    black
    doc8
    flake8
    ipython
    pytest
    zest.releaser[recommended]

[options.packages.find]
exclude =
    tests

[flake8]
# black compatibility settings
max-line-length = 88
exclude = build, dist, .eggs
ignore = E203, W503

[bdist_wheel]
python-tag = py3

[distutils]
index-servers = pypi

[zest.releaser]
create-wheel = yes
